<resources>
    <string name="app_name">Private Period Tracker</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_create_password">Create Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_the_privacy_period_tracker">Welcome to the Privacy Period Tracker.</string>
    <string name="save">Save</string>
    <string name="choose_a_quot_duress_quot_password_this_is_a_password_that_when_supplied_will_silently_generate_fake_data_that_will_appear_real_and_will_delete_your_actual_data">Choose a \"duress\" password. This is a password that when supplied, will silently generate fake data that will appear real, and will delete your actual data.</string>
    <string name="set_the_password_you_wish_to_use_to_encrypt_your_data_with_longer_is_better_and_avoid_re_using_an_existing_password_if_left_blank_no_password_will_be_required_to_access_your_data">Set the password you wish to use to encrypt your data with. Longer is better, and avoid re-using an existing password. If left blank, no password will be required to access your data.</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="next_period_in_n_days">Next period in %d days…</string>
    <string name="you_have_been_pregnant_for_N_days">You have been pregnant for %d days, Congrats!</string>
    <string name="your_cycle_is_x_days_and_your_average_period_is_y_days" formatted="false">Your cycle is %d days, and your average period is %d days</string>
    <string name="this_is_not_medical_advice_if_you_have_concerns_see_a_medical_professional">This is not medical advice. If you have concerns, see a medical professional</string>
    <string name="add_event">Add Event</string>
    <string name="unknown_state">Welcome. Start by adding your last period dates.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="save_event">Save Event</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="painkiller">Painkiller</string>
    <string name="pregnancy_start">Pregnancy Start</string>
    <string name="pregnancy_stop">Pregnancy Stop</string>
    <string name="period_end">Period End</string>
    <string name="period_start">Period Start</string>
    <string name="tampon_start">Tampon Start</string>
    <string name="tampon_stop">Tampon Stop</string>
    <string name="need_more_data">Need more data</string>
    <string name="list_events">List Events</string>
    <string name="tbd">TBD</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="click_to_open_app">Click to open app</string>
    <string name="period_coming_in_N_days">Period coming in %d days</string>
    <string name="period_ending_in_N_days">Period ending in %d days</string>
    <string name="period_coming_soon">Period coming soon…</string>
    <string name="period_coming_today">Period coming today</string>
    <string name="priv_policy_url">https://github.com/cameroncros/PrivatePeriodTracker/blob/85792c1c2dd1c334c55b574083d9c437cef78dc6/privacy-policy.md</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="opening_debug_menu_in__clicks">Opening debug menu in %d clicks</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notify_on_day_X">Notify %d days before period</string>
    <string name="notify_on_day">Send notification on the day</string>
    <string name="auto_end_period">Automatically end period</string>
    <string name="auto_end_period_after">"Auto end period after: "</string>
    <string name="days">Days</string>
    <string name="notes">Notes</string>
</resources>