...
            ) { day: LocalDate -> selectedDay = day }
        }
        Row(
            Modifier
                .fillMaxWidth(1f)
                .clickable { showTimePicker = true }
                .testTag("eventtime"),
            horizontalArrangement = Arrangement.Center,
            verticalAlignment = Alignment.CenterVertically,
        ) {
            Icon(
                Icons.Filled.AccessTime,
                "",
...
                        val endEventTime = eventTime.plusDays(days)
                        val endEvent = PeriodEvent(endEventTime, EventType.PeriodEnd)
                        events.add(endEvent)
                    }
                    addFn(events)
                },
                modifier = Modifier.testTag("saveevent")
            ) {
                Image(Icons.Filled.Save, "save")
                Text(stringResource(id = R.string.save_event))
            }
        }
    }
...
