...
                .fillMaxWidth(1f)
                .padding(16.dp)
        )
        {
            Button(
                onClick = addFn,
                modifier = Modifier.testTag("addevent")
            ) {
                Icon(Icons.Filled.Add, "add")
                Text(stringResource(id = R.string.add_event))
            }
        }
    }
...
}

@Composable
fun Event(event: PeriodEvent, delFn: (event: PeriodEvent) -> Unit) {
    Card(modifier = Modifier
        .fillMaxWidth(1f)
        .testTag("periodevent")) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween,
            modifier = Modifier.fillMaxWidth(1f)
        ) {
            Row {
...
