...
            text = stringResource(R.string.choose_a_quot_duress_quot_password_this_is_a_password_that_when_supplied_will_silently_generate_fake_data_that_will_appear_real_and_will_delete_your_actual_data),
            modifier = Modifier.padding(8.dp)
        )
        TextField(
            value = duress,
            onValueChange = { s ->
                duress = s
            },
            Modifier
                .fillMaxWidth(1f)
                .padding(8.dp)
                .testTag("duress")
        )
...
